--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "tensorflow"]
-	path = tensorflow
-	url = https://github.com/tensorflow/tensorflow.git
 [submodule "tf_models"]
 	path = tf_models
 	url = https://github.com/tensorflow/models.git
+[submodule "tensorflow"]
+	path = tensorflow
+	url = https://github.com/lordadamson/tensorflow
